--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "json-server": "^0.17.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-particles-js": "^3.4.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
+    "react-tsparticles": "^1.41.2",
     "sass": "^1.49.7",
     "web-vitals": "^2.1.4"
   },
