--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^4.14.0",
     "axios": "^0.25.0",
     "json-server": "^0.17.0",
+    "nprogress": "^0.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
