--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "5.0.0",
     "react-tsparticles": "^1.41.2",
     "redux": "^4.1.2",
+    "redux-persist": "^6.0.0",
     "sass": "^1.49.7",
     "web-vitals": "^2.1.4"
   },
